--- a/GAB.VER.CSS
+++ b/GAB.VER.CSS
@@ -1,23 +1,139 @@
-body{
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
+}
+
+body {
     margin: 0;
 }
-.top-header{
+
+.top-header {
     background-color: #515655;
-    
-}
-.container{
-    max-width:1200px;
-    margin:0 auto;
-}
-ul{
-    list-style: none;
-;
-}
-.flex-container{
-    display: flex;
-}
-.container.flex-container, ul.flex-container{
-    justify-content: space-between;
-    color: white;
+    height: 160px;
+    font-family: 'Cardo', serif;
+    font-weight: 400;
 
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.flex-container {
+    display: flex;
+}
+
+.container.flex-container,
+ul.flex-container {
+    justify-content: space-between;
+    color: white;
+    align-items: center;
+}
+
+.container.flex-container {
+    justify-content: space-between;
+    color: white;
+}
+
+.main-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-header ul li {
+    margin-left: 30px;
+
+}
+
+.main-header a {
+    text-decoration: none;
+    color: #fff;
+}
+
+button {
+    background-color: #567E7A;
+    border: none;
+    padding: 68px 30px;
+    box-shadow: 0 4px 4px 0 #515655;
+    color: white;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 19px;
+}
+
+/*nav-header*/
+
+.img {
+    background-image: (Pazaislis);
+    text-align: center;
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+
+}
+
+h1, h3, h5 {
+    display: flex;
+    position: relative;
+    text-align: center;
+    align-content: space-between;
+    flex-direction:column;
+    position: absolute;
+    text-transform: uppercase;
+    color: white;
+    font-family: 'Cardo', serif;
+    font-weight: 400;
+}
+h1{
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Cardo', serif;
+}
+h3{
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Cardo', serif;
+}
+h5{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'DM Sans', sans-serif;
+    display: block;
+    flex
+}
+/*mes*/
+.mp{
+    position: bottom;
+  text-align:end;
+}
+/*.res, .vies, .svent {
+    display: flex;
+    flex-direction: column;
+    width:200px;
+    margin: 80px auto 0;
+    text-align:center;
+    color:#fff;
+}
+*/
+.service{
+    background-color: #F2F2F2;
+    font-family: 'Cardo', serif;
+    font-weight: 400;
+    display: flex;
+    flex-direction: row;
+}
+
